--- a/drinks.html
+++ b/drinks.html
@@ -232,10 +232,8 @@
         }
 
         .sticky-header-content {
-            position: sticky;
-            top: 115px;
-            z-index: 900;
-            background: transparent;
+            position: relative;
+            background: white;
             padding-bottom: 10px;
             margin-bottom: 20px;
         }
@@ -244,16 +242,16 @@
             width: 100%;
             height: 95px;
             object-fit: cover;
-            display: block;
-            background: white;
+            margin-top: 115px;
         }
 
         .search-container {
-            display: flex;
-            justify-content: flex-end;
+            position: sticky;
+            top: 115px;
+            z-index: 900;
             padding: 20px 0;
             width: 100%;
-        
+            background: white;
         }
 
         .search-bar {
@@ -710,9 +708,31 @@
         }
 
         @media (max-width: 768px) {
+            .banner-image {
+                width: 100vw;
+                margin-left: -20px;
+                margin-right: -20px;
+                margin-top: 115px;
+                height: 95px;
+            }
+
+            .sticky-header-content {
+                margin-left: -20px;
+                margin-right: -20px;
+                padding: 0;
+            }
+
+            .search-container {
+                padding: 20px;
+            }
+
             .search-bar {
-                width: 80%;
-                margin-right: 10%;
+                width: 90%;
+                margin: 0 auto;
+            }
+
+            body {
+                overflow-x: hidden;
             }
 
             .info-sidebar {
@@ -772,6 +792,200 @@
                 padding: 10px;
             }
         }
+
+        /* Ensure proper layout on very small devices */
+        @media (max-width: 320px) {
+            .banner-image {
+                height: 80px; /* Slightly smaller on very small screens */
+            }
+        }
+
+        .additional-sections {
+            width: 100%;
+            margin-top: 50px;
+            padding: 0 20px;
+        }
+
+        /* Features Section */
+        .features-section {
+            padding: 40px 0;
+            background: #f9f9f9;
+            border-radius: 12px;
+            margin-bottom: 40px;
+        }
+
+        .features-section h2 {
+            text-align: center;
+            margin-bottom: 30px;
+            color: #333;
+        }
+
+        .features-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 30px;
+            padding: 0 20px;
+        }
+
+        .feature-card {
+            text-align: center;
+            padding: 20px;
+            background: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            transition: transform 0.3s ease;
+        }
+
+        .feature-card:hover {
+            transform: translateY(-5px);
+        }
+
+        .feature-icon {
+            font-size: 2.5rem;
+            margin-bottom: 15px;
+        }
+
+        /* How It Works Section */
+        .how-it-works {
+            padding: 40px 0;
+            text-align: center;
+            margin-bottom: 40px;
+        }
+
+        .steps-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 30px;
+            padding: 20px;
+        }
+
+        .step {
+            position: relative;
+            padding: 20px;
+        }
+
+        .step-number {
+            width: 40px;
+            height: 40px;
+            background: #9b59b6;
+            color: white;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: 0 auto 15px;
+            font-weight: bold;
+        }
+
+        /* App Download Section */
+        .app-download {
+            background: #9b59b6;
+            color: white;
+            padding: 40px 20px;
+            border-radius: 12px;
+            margin-bottom: 40px;
+            text-align: center;
+        }
+
+        .app-content {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .app-buttons {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .app-button img {
+            height: 40px;
+        }
+
+        /* Footer */
+        .site-footer {
+            background: #333;
+            color: white;
+            padding: 40px 20px 20px;
+            margin-top: 40px;
+        }
+
+        .footer-content {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 30px;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .footer-section h3 {
+            margin-bottom: 15px;
+            color: #9b59b6;
+        }
+
+        .footer-section ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        .footer-section ul li {
+            margin-bottom: 10px;
+        }
+
+        .footer-section a {
+            color: white;
+            text-decoration: none;
+        }
+
+        .social-links {
+            display: flex;
+            gap: 15px;
+            font-size: 1.5rem;
+        }
+
+        .footer-bottom {
+            text-align: center;
+            margin-top: 30px;
+            padding-top: 20px;
+            border-top: 1px solid #444;
+        }
+
+        /* Responsive Adjustments */
+        @media (max-width: 768px) {
+            .features-grid,
+            .steps-container {
+                grid-template-columns: 1fr;
+            }
+
+            .app-buttons {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .footer-content {
+                grid-template-columns: 1fr 1fr;
+            }
+
+            .footer-section {
+                text-align: center;
+            }
+
+            .social-links {
+                justify-content: center;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .footer-content {
+                grid-template-columns: 1fr;
+            }
+
+            .additional-sections {
+                padding: 0 10px;
+            }
+        }
     </style>
 </head>
 <body>
@@ -814,8 +1028,7 @@
     <div class="sticky-header-content">
         <img src="drinks-images/banner/banner.jpg" 
              alt="Drinks Banner" 
-             class="banner-image"
-             loading="eager">
+             class="banner-image">
         <div class="search-container">
             <input type="text" class="search-bar" placeholder="Search drinks..." autocomplete="off">
         </div>
@@ -952,6 +1165,104 @@
             <p class="card-content">Need help? Contact us at any time:</p>
             <p class="phone-number">+254 700 000 000</p>
         </div>
+    </div>
+
+    <div class="additional-sections">
+        <!-- Features Section -->
+        <section class="features-section">
+            <h2>Why Choose Us</h2>
+            <div class="features-grid">
+                <div class="feature-card">
+                    <div class="feature-icon">🚀</div>
+                    <h3>Fast Delivery</h3>
+                    <p>Get your drinks delivered within 30 minutes</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">❄️</div>
+                    <h3>Always Fresh</h3>
+                    <p>Drinks served at perfect temperature</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">💰</div>
+                    <h3>Best Prices</h3>
+                    <p>Competitive prices and regular offers</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- How It Works Section -->
+        <section class="how-it-works">
+            <h2>How It Works</h2>
+            <div class="steps-container">
+                <div class="step">
+                    <div class="step-number">1</div>
+                    <h3>Choose Your Drinks</h3>
+                    <p>Browse our wide selection of beverages</p>
+                </div>
+                <div class="step">
+                    <div class="step-number">2</div>
+                    <h3>Place Order</h3>
+                    <p>Add to cart and checkout securely</p>
+                </div>
+                <div class="step">
+                    <div class="step-number">3</div>
+                    <h3>Quick Delivery</h3>
+                    <p>Get your drinks delivered to your doorstep</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Download App Section -->
+        <section class="app-download">
+            <div class="app-content">
+                <h2>Get Our Mobile App</h2>
+                <p>Download our app for a better experience</p>
+                <div class="app-buttons">
+                    <a href="#" class="app-button">
+                        <img src="drinks-images/app-store.png" alt="App Store">
+                    </a>
+                    <a href="#" class="app-button">
+                        <img src="drinks-images/play-store.png" alt="Play Store">
+                    </a>
+                </div>
+            </div>
+        </section>
+
+        <!-- Footer -->
+        <footer class="site-footer">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h3>About Us</h3>
+                    <p>Your trusted drinks delivery partner</p>
+                </div>
+                <div class="footer-section">
+                    <h3>Quick Links</h3>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Menu</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h3>Contact</h3>
+                    <p>Email: info@dema.com</p>
+                    <p>Phone: +254 700 000 000</p>
+                </div>
+                <div class="footer-section">
+                    <h3>Follow Us</h3>
+                    <div class="social-links">
+                        <a href="#">📱</a>
+                        <a href="#">📘</a>
+                        <a href="#">📸</a>
+                        <a href="#">🐦</a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2024 Dema Drinks. All rights reserved.</p>
+            </div>
+        </footer>
     </div>
 
     <script>
